tests/valid_inputs/struct_basic.cpp
// just test that this compiles

struct S {
	int a;
	double * d;
	char arr[5];
};

int main() {
	S s;
}
