tests/invalid_inputs/sema/array_of_void.cpp

int main() {
	void arr[5];
}
